src/test/ui/unused/unused-attr-macro-rules.stderr
error: unused attribute
  --> $DIR/unused-attr-macro-rules.rs:7:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-attr-macro-rules.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-macro-rules.rs:8:1
   |
LL | #[path="foo"]
   | ^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-macro-rules.rs:9:1
   |
LL | #[recursion_limit="1"]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![foo]`
  --> $DIR/unused-attr-macro-rules.rs:9:1
   |
LL | #[recursion_limit="1"]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

